--- a/motocrosskursk/index.html
+++ b/motocrosskursk/index.html
@@ -108,36 +108,23 @@
 
 		<div class="footer__row d-flex">
 
-			<a href="index.html" class="logo-icon footer__logo">
-				<!-- <? bloginfo("url"); ?> -->
-				<p class="logo-icon__text">Название <span>текст logo</span></p>
-			</a>
-
-			<ul class="footer__menu">
-				<li class="footer__menu-item"><a href="#" class="footer__menu-item-link">Пункт 1</a></li> 
-				<li class="footer__menu-item"><a href="#" class="footer__menu-item-link">Пункт 2</a></li>
-				<li class="footer__menu-item"><a href="#" class="footer__menu-item-link">Пункт 3</a></li>
-				<li class="footer__menu-item"><a href="#" class="footer__menu-item-link">Пункт 4</a></li>
-				<li class="footer__menu-item"><a href="#" class="footer__menu-item-link">Пункт 5</a></li>
+			<ul class="menu-list footer__menu d-flex">
+				<li class="menu-list__item"><a href="#" class="menu-list__link">О федерации</a></li>
+				<li class="menu-list__item"><a href="#" class="menu-list__link">Соревнования</a></li>
+				<li class="menu-list__item"><a href="#" class="menu-list__link">Архив</a></li>
+				<li class="menu-list__item"><a href="#" class="menu-list__link">Контакты</a></li>
 			</ul>
 
-			<div class="contacts footer__contact d-flex">
-				<a href="tel:84951700000" class="contacts__phone header__phone">8 (495) 170-00-00</a>
+			<div class="footer__contacts contacts d-flex">
+				<a href="tel:88003504566" class="contacts__phone footer__phone">8 800 350 45 66</a>
+				<a href="mailto:info@motocrosskursk.ru" class="contacts__mail footer__mail">info@motocrosskursk.ru</a>
 				<!-- <a href="tel:<? echo preg_replace('/[^0-9]/', '', $tel); ?>"><? echo $tel = carbon_get_theme_option("as_phone_1"); ?></a> -->
-				<p class="contacts__time-phone header__time-phone">Звонить с 08:00 до 22:00</p>
-				<a href="#callback" class="header__popup-link _popup-link">ЗАКАЗАТЬ ЗВОНОК</a>
 			</div>
 
-			<form class="footer__form" action="#">
-				<div class="form__line">
-					<h3 class="footer__form-title">Форма обратной связи</h3>
-					<input id="name" autocomplete="off" type="text" name="form[]" data-error="Заполните поля" data-value="Ваше имя"
-					class="footer__form-input input _req">
-					<input id="tel2" autocomplete="off" type="text" name="form[]" data-error="Заполните поля" data-value="Ваш телефон"
-					class="footer__form-input input _phone _req">
-				</div>
-				<button type="submit" class="footer__form-btn btn">Записаться на прием</button> 
-			</form>
+			<div class="footer__social-block social-block d-flex">
+				<a href="#" class="footer__social-icon social-block-icon social-block-icon-01"></a>
+				<a href="#" class="footer__social-icon social-block-icon social-block-icon-02"></a>
+			</div>
 
 		</div>
 
