--- a/motocrosskursk/index.html
+++ b/motocrosskursk/index.html
@@ -78,26 +78,74 @@
 
 			<section id="about" class="about">
 				<div class="_container">
-
-
-
+					<h2 class="about__title">О федерации</h2>
+					<div class="about__descp">
+						<p>
+							Мотокросс - один из самых сложных технических видов спорта, требующий физической силы, выносливости,
+							скоординированности и решительности.
+							Когда вы направляетесь на трассу впервые, желательно иметь начальные представления о том, что вам
+							предстоит. Поэтому мы попробуем осветить
+							основные моменты техники езды и дать некоторые советы. Разумеется, наш короткий текст не является
+							самоучителем) Учиться надо на трассе, под
+							присмотром тренера, от простого к сложному.
+						</p>
+						<p>
+							Первое, что вы должны сделать перед выездом на трек – правильно экипироваться. Ведь существует негласное
+							правило:
+							экипировка важна на случай аварии, а не для обычной езды. Но падения в мотоспорте более, чем вероятны, а
+							значит и защита должна соответствовать.
+							Есть много вариантов экипа начального уровня. Главное, не экономьте на защите головы и ног - в этом случае
+							лучше приобрести продукцию
+							известного бренда. Также не забывайте, что понадобятся мотоочки, пояс, защита шеи, торса и коленей, ну и,
+							конечно же, перчатки, джерси и штаны.
+						</p>
+					</div>
 				</div>
 			</section>
 
-			<section id="about" class="about">
+			<section id="competitions" class="competitions">
 				<div class="_container">
+					<h2 class="competitions__title">Наши соревнования</h2>
 
-				</div>
-			</section>
+					<div class="competitions__row">
 
-			<section id="about" class="about">
-				<div class="_container">
+						<div class="competitions__column">
+							<div class="competitions__card">
+								<div class="competitions__card-img">
+									<img src="img/competitions/01.jpg" alt="">
+								</div>
+								<div class="competitions__card-descp">
+									<h4>Мотокросс в Крутом логе</h4>
+									<div class="competitions__card-descp-flex d-flex">
+										<div class="competitions__card-descp-flex-contacts">
+											<p class="competitions__card-descp-flex-contacts-date">16-17 октября 2022 г.</p>
+											<p class="competitions__card-descp-flex-contacts-address">г. Курск, ур.Крутой лог</p>
+										</div>
+										<a href="#" class="competitions__card-descp-flex-btn btn">ПОДРОБНЕЕ О МЕРОПРИЯТИИ</a>
+									</div>
+								</div>
+							</div>
+						</div>
 
-				</div>
-			</section>
+						<div class="competitions__column">
+							<div class="competitions__card">
+								<div class="competitions__card-img">
+									<img src="img/competitions/02.jpg" alt="">
+								</div>
+								<div class="competitions__card-descp">
+									<h4>Extreme Challenge</h4>
+									<div class="competitions__card-descp-flex d-flex">
+										<div class="competitions__card-descp-flex-contacts">
+											<p class="competitions__card-descp-flex-contacts-date">03 ноября 2022 г.</p>
+											<p class="competitions__card-descp-flex-contacts-address">г. Курск, ур.Крутой лог</p>
+										</div>
+										<a href="#" class="competitions__card-descp-flex-btn btn">ПОДРОБНЕЕ О МЕРОПРИЯТИИ</a>
+									</div>
+								</div>
+							</div>
+						</div>
 
-			<section id="about" class="about">
-				<div class="_container">
+					</div>
 
 				</div>
 			</section>
