Баннер на главной

--- a/#src/index.html
+++ b/#src/index.html
@@ -9,6 +9,19 @@
 		@@include('_header.html',{})
 		<main class="page">
 
+			<section id="banner" class="banner">
+				<div class="nuar_blk"></div>
+				<div class="_container">
+					<div class="banner__flex">
+						<!-- <h1 class="banner__title">
+							Мотокросс <br>
+ 							в г. Курске, <br>
+							урочище Крутой лог <br>
+						</h1> -->
+					</div>
+				</div>
+			</section>
+
 			<section id="about" class="about">
 				<div class="_container">
 					<h2 class="about__title">О федерации</h2>
