Банер на главной

--- a/motocrosskursk/index.html
+++ b/motocrosskursk/index.html
@@ -79,12 +79,26 @@
 			<section id="banner" class="banner">
 				<div class="nuar_blk"></div>
 				<div class="_container">
-					<div class="banner__flex">
-						<!-- <h1 class="banner__title">
-							Мотокросс <br>
- 							в г. Курске, <br>
-							урочище Крутой лог <br>
-						</h1> -->
+					<div class="banner__flex d-flex">
+
+						<div class="banner__flex-descp">
+							<h1 class="banner__title">
+								Мотокросс в г. Курске, <br>
+								урочище Крутой лог
+							</h1>
+							<div class="banner__flex-descp-btn d-flex">
+								<a href="#" class="btn">ПОДАТЬ ЗАЯВКУ</a>
+								<a href="#" class="btn btn_transp">ПОДРОБНЕЕ О СОРЕВНОВАНИИ</a>
+							</div>
+						</div>
+
+						<div class="banner__flex-date">
+							<p class="banner__flex-date-number">16-17</p>
+							<div class="banner__flex-date-line"></div>
+							<p class="banner__flex-date-month">октября</p>
+							<p class="banner__flex-date-year">2022</p>
+						</div>
+
 					</div>
 				</div>
 			</section>
