Добавил линию на главной

--- a/#src/index.html
+++ b/#src/index.html
@@ -63,6 +63,12 @@
 				</div>
 			</section>
 
+			<section id="line" class="line">
+				<div class="_container">
+					<div class="line-bg"></div>
+				</div>
+			</section>
+
 			<section id="competitions" class="competitions">
 				<div class="_container">
 					<h2 class="competitions__title">Наши соревнования</h2>
