Структура стр Соревнование

--- a/#src/index.html
+++ b/#src/index.html
@@ -20,7 +20,7 @@
 								урочище Крутой лог
 							</h1>
 							<div class="banner__flex-descp-btn d-flex">
-								<a href="#" class="btn">ПОДАТЬ ЗАЯВКУ</a>
+								<a href="#callback" class="btn _popup-link">ПОДАТЬ ЗАЯВКУ</a>
 								<a href="#" class="btn btn_transp">ПОДРОБНЕЕ О СОРЕВНОВАНИИ</a>
 							</div>
 						</div>
